tests/rosetta/out/Fortran/benfords-law.error
gfortran: exit status 1
/tmp/benfords-law.f90:55:9:

   55 |         s = s(0+1:(dot + 4))
      |         1
Error: Unclassifiable statement at (1)
/tmp/benfords-law.f90:79:13:

   79 |     allocate(res(0))
      |             1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/benfords-law.f90:109:32:

  109 |   recursive subroutine show(nums,title)
      |                                1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘nums’ at (1)
/tmp/benfords-law.f90:69:5:

   69 |     s = fmtF3(x)
      |     1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/benfords-law.f90:48:5:

   48 |     s = s0
      |     1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/benfords-law.f90:83:25:

   83 |       allocate(app1(size(res)+1))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/benfords-law.f90:84:18:

   84 |       app1(1:size(res)) = res
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/benfords-law.f90:85:16:

   85 |       app1(size(res)+1) = b
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/benfords-law.f90:86:6:

   86 |       res = app1
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/benfords-law.f90:134:14:

  134 |     call show(fib1000(),'First 1000 Fibonacci numbers')
      |              1
Error: Expected a procedure for argument ‘nums’ at (1)
/tmp/benfords-law.f90:134:24:

  134 |     call show(fib1000(),'First 1000 Fibonacci numbers')
      |                        1
Warning: Character length of actual argument shorter than of dummy argument ‘title’ (28/100) at (1)
/tmp/benfords-law.f90:115:10:

  115 |       d = leadingDigit(n)
      |          1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/tmp/benfords-law.f90:98:6:

   98 |       x = -x
      |      1
Error: Dummy argument ‘x’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/benfords-law.f90:101:6:

  101 |       x = (x / 10)
      |      1
Error: Dummy argument ‘x’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/benfords-law.f90:104:6:

  104 |       x = (x * 10)
      |      1
Error: Dummy argument ‘x’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/benfords-law.f90:103:29:

  103 |     do while ((((x > 0) .and. x) < 1))
      |                             1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/REAL(4)
/tmp/benfords-law.f90:116:26:

  116 |       if ((((d >= 1) .and. d) <= 9)) then
      |                          1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/benfords-law.f90:113:20:

  113 |     do i2 = 1, size(nums)
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/benfords-law.f90:121:17:

  121 |     total = size(nums)
      |                 1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/benfords-law.f90:128:86:

  128 |       line = trim(trim(trim(trim('  ' // s3) // '  ') // padFloat3(obs,9)) // '  ') // padFloat3(preds(((i)+1)),8)
      |                                                                                      1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/tmp/benfords-law.f90:50:9:

   50 |     if (((dot == 0) - 1)) then
      |         1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/benfords-law.f90:128:56:

  128 |       line = trim(trim(trim(trim('  ' // s3) // '  ') // padFloat3(obs,9)) // '  ') // padFloat3(preds(((i)+1)),8)
      |                                                        1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/tmp/benfords-law.f90:34:24:

   34 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
